<?xml version="1.0"?>
<!--

    Copyright © 2017 Jeremy Custenborder (jcustenborder@gmail.com)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.jcustenborder.kafka.connect</groupId>
        <artifactId>kafka-connect-parent</artifactId>
        <version>3.3.1-1</version>
    </parent>
    <artifactId>kafka-connect-transform-common</artifactId>
    <version>0.1.2.0-TWM</version>
    <name>kafka-connect-transform-common</name>
    <url>https://github.com/jcustenborder/kafka-connect-transform-common</url>
    <inceptionYear>2017</inceptionYear>
    <description>Common transformations for Kafka Connect.</description>
	<properties>
        <maven.compiler.release>21</maven.compiler.release>
	    <slf4j.version>1.7.30</slf4j.version>
	</properties>    
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https:/github.com/jcustenborder/kafka-connect-transform-common/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>jcustenborder</id>
            <name>Jeremy Custenborder</name>
            <url>https://github.com/jcustenborder</url>
            <roles>
                <role>Committer</role>
            </roles>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/jcustenborder/kafka-connect-transform-common.git
        </connection>
        <developerConnection>
            scm:git:git@github.com:jcustenborder/kafka-connect-transform-common.git
        </developerConnection>
        <url>https://github.com/jcustenborder/kafka-connect-transform-common</url>
    </scm>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/jcustenborder/kafka-connect-transform-common/issues</url>
    </issueManagement>
    <dependencies>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>connect-json</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.jcustenborder.kafka.connect</groupId>
            <artifactId>connect-utils-jackson</artifactId>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.jcustenborder.kafka.connect</groupId>
            <artifactId>connect-utils-testing-data</artifactId>
            <version>${connect-utils.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.ws.commons</groupId>
            <artifactId>ws-commons-util</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.12.1</version>
        </dependency>
        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
            <version>1.4.01</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.9.0</version>
        </dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
		</dependency>        
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.10.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <descriptors>
                        <descriptor>src/assembly/package.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-connect-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>hub</id>
                        <phase>none</phase>
                    </execution>
                </executions>
                <configuration>
                    <confluentControlCenterIntegration>true</confluentControlCenterIntegration>
                    <documentationUrl>https://jcustenborder.github.io/kafka-connect-documentation/
                    </documentationUrl>
                    <componentTypes>
                        <componentType>transform</componentType>
                    </componentTypes>
                    <tags>
                        <tag>Common</tag>
                        <tag>Transformation</tag>
                    </tags>
                    <title>Kafka Connect Common Transformations</title>
                    <supportUrl>${project.issueManagement.url}</supportUrl>
                    <supportSummary>Support provided through community involvement.</supportSummary>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
